- `gui/launcher`: add button for copying output to the system clipboard
- `deathcause`: give better responses for vermin remains
- `deathcause`: automatically choose a relevant corpse when a pile of items is selected
- `gui/quantum`: add option for whether a minecart automatically gets ordered and/or attached
- `gui/quantum`: when attaching a minecart, show which minecart was attached

## Removed

# 50.13-r1.1

## Fixes
- `gui/quantum`: accept all item types in the output stockpile as intended
- `deathcause`: fix error on run

# 50.13-r1

## New Tools
- `gui/unit-info-viewer`: (reinstated) give detailed information on a unit, such as egg laying behavior, body size, birth date, age, and information about their afterlife behavior (if a ghost)
- `gui/quantum`: (reinstated) point and click interface for creating quantum stockpiles or quantum dumps

## Fixes
- `open-legends`: don't interfere with the dragging of vanilla list scrollbars
- `gui/create-item`: properly restrict bags to bag materials by default
- `gui/create-item`: allow gloves and shoees to be made out of textiles by default
- `exterminate`: don't classify dangerous non-invader units as friendly (e.g. snatchers)

## Misc Improvements
- `open-legends`: allow player to cancel the "DF will now exit" dialog and continue browsing
- `gui/gm-unit`: changes to unit appearance will now immediately be reflected in the unit portrait

# 50.12-r3

## New Tools
- `gui/aquifer`: interactive aquifer visualization and editing
- `open-legends`: (reinstated) open legends mode directly from a loaded fort

## New Features
- `quickfort`: add options for setting warm/damp dig markers when applying blueprints
- `gui/quickfort`: add options for setting warm/damp dig markers when applying blueprints
- `gui/reveal`: new "aquifer only" mode to only see hidden aquifers but not reveal any tiles
- `gui/notify`: optional notification for general wildlife (not on by default)

## Fixes