@@ -49,6 +49,7 @@ Template for new versions:
 - `deathcause`: automatically choose a relevant corpse when a pile of items is selected
 - `gui/quantum`: add option for whether a minecart automatically gets ordered and/or attached
 - `gui/quantum`: when attaching a minecart, show which minecart was attached
+- `gui/quantum`: allow multiple feeder stockpiles to be linked to the minecart route
 
 ## Removed
 
